dataset1235/2025-2/805158916/users/639665975/executions/2651470117_3921830315.log
== RUN (2025-08-20 15:55:44)
-- CODE: 
preço = 2.86

float(input("Qnts litros foram abastecidos?"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Qnts litros foram abastecidos?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Qnts litros foram abastecidos?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Qnts litros foram abastecidos?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Qnts litros foram abastecidos?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Qnts litros foram abastecidos?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Qnts litros foram abastecidos?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:55:39)
-- CODE: 
preço = 2.86

float(input("Qnts litros foram abastecidos?")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    float(input("Qnts litros foram abastecidos?")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    float(input("Qnts litros foram abastecidos?")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    float(input("Qnts litros foram abastecidos?")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    float(input("Qnts litros foram abastecidos?")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    float(input("Qnts litros foram abastecidos?")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    float(input("Qnts litros foram abastecidos?")
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 15:58:59)
-- CODE: 
preço = 2.86

litros = float(input("Qnts litros foram abastecidos?"))
gasosa = litros*preço+50
total = gasosa+ 34/100*gasosa
print(float(round(total,2)))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Qnts litros foram abastecidos?106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Qnts litros foram abastecidos?634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Qnts litros foram abastecidos?258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Qnts litros foram abastecidos?401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Qnts litros foram abastecidos?979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Qnts litros foram abastecidos?230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
